--- a/LMS/Frontend/index.html
+++ b/LMS/Frontend/index.html
@@ -8,49 +8,42 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="bg-cover bg-center min-h-screen"
-    style="background-image: url('/Frontend/Images/Black\ Grey\ Minimalist\ Book\ Club\ Logo\ \(1\).png');">
+<body class="bg-gray-100 bg-cover" style="background-image: url('/images/Books\ background\ simple\ colorful\ phone\ wallpaper.png')" >
 
     <!-- Navbar -->
-    <div class="flex items-center justify-between p-2 h-[70px] bg-black">
-        <div><img src="/Frontend/Images/Black_Grey_Minimalist_Book_Club_Logo__1_-removebg-preview.png" alt="logo" class="w-24"></div>
-        <div class="text-white">
-            <h1 class="text-xl font-mono font-bold"><span class="text-blue-500">BOOK</span> NEST</h1>
+    <nav class="top-0 z-50 ">
+        <div class="container mx-auto flex justify-between items-center p-4">
+            <!-- Logo -->
+            <div class="flex items-center space-x-2 mx-0">
+                <img src="/images/Black_Grey_Minimalist_Book_Club_Logo__1_-removebg-preview.png" alt="logo"
+                    class="w-20 h-20">
+                <h1 class="text-white text-2xl font-bold">BOOK NEST</h1>
+            </div>
+
+
+            <!-- Desktop menu -->
+            <div class="lg:flex space-x-6 font-bold text-md">
+                <a href="login.html" class="text-white   hover:text-blue-200 transition duration-300">Login</a>
+            </div>
         </div>
-        <div class="flex items-center space-x-4">
-            <a href="home.html"
-                class="text-white text-md font-bold hover:text-blue-500 transition duration-300">Home</a>
-            <a href="about.html"
-                class="text-white text-md font-bold hover:text-blue-500 transition duration-300">About</a>
-            <a href="contact.html"
-                class="text-white text-md font-bold hover:text-blue-500 transition duration-300">Contact</a>
-        </div>
-    </div>
+    </nav>
+
 
     <!-- Hero Section -->
-    <div class="flex flex-col items-center justify-center text-center min-h-screen text-white">
-        <h2 class="text-4xl font-bold mb-6 shadow-lg backdrop-blur-md bg-opacity-60 px-4 py-2 rounded-lg">
-            WELCOME TO LIBRARY <span class="text-blue-500">ZONE</span>
-        </h2>
-        <p class="text-lg mb-8 max-w-xl mx-auto">Discover an amazing world of books, knowledge, and resources with our
-            easy-to-use library management system. Join us today and start exploring!</p>
-
-        <!-- Buttons -->
-        <div class="flex space-x-6">
-            <a href="login.html"
-                class="px-6 py-3 bg-blue-500 text-white rounded-lg text-lg font-bold hover:bg-blue-600 transition duration-300">
-                Login
-            </a>
-            <a href="signup.html"
-                class="px-6 py-3 bg-green-500 text-white rounded-lg text-lg font-bold hover:bg-green-600 transition duration-300">
-                Sign Up
-            </a>
+    <section class="h-screen flex items-center justify-center">
+        <div class="text-center rounded-lg p-8 max-w-xl mx-auto shadow-lg">
+            <h1 class="text-4xl font-bold text-white mb-4">Welcome to Our Book Nest</h1>
+            <p class="text-slate-100 mb-8">Discover, borrow, and explore a world of books, all in one place.</p>
+            <a href="signup.html" class="bg-blue-500 text-white py-2 px-6 rounded-lg hover:bg-blue-600 ">Get
+                Started</a>
         </div>
-    </div>
+    </section>
 
     <!-- Footer -->
-    <footer class="bg-purple-100 py-4 text-center text-black mt-12">
-        <p class="text-sm">© 2024 Library Management System. All rights reserved.</p>
+    <footer class="bg-slate-800 py-2">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 flex justify-center items-center">
+            <p class="text-white text-center">© 2024 Book Nest. All rights reserved.</p>
+        </div>
     </footer>
 
 </body>
