--- a/LMS/Frontend/login.html
+++ b/LMS/Frontend/login.html
@@ -11,19 +11,21 @@
             event.preventDefault()
             const uname = document.getElementById("username").value
             const pass = document.getElementById("password").value
+console.log(uname,pass);
 
-            const response = await fetch("http://127.0.0.1:2000/login",{
+            const response = await fetch("http://127.0.0.1:8080/login",{
                 method:"POST",
+                credentials:"include",
                 headers:{'Content-Type':'application/json'},
                 body:JSON.stringify({
-                    Username:uname,
-                    Password:pass
+                    username:uname,
+                    password:pass
                 })
             })
             console.log(response.status);
             if(response.status == 200){
                 alert("Successfully logged in")
-                window.location.href="/Frontend/home.html"
+                window.location.href="http://127.0.0.1:5500/Frontend/home.html"
 
             } else{
                 alert("Invalid username or password")
@@ -34,24 +36,26 @@
     </script>
 </head>
 
-<body class="bg-gray-100 flex justify-center items-center min-h-screen">
+<body class="flex items-center justify-center min-h-screen bg-cover"
+    style="background-image: url('/images/Read\ A\ Book\ Motivational\ Quote\ Instagram\ Post.png')">
 
     <!-- Login Form Container -->
-    <div class="bg-white p-8 rounded-lg shadow-lg w-full sm:w-96">
-        <h2 class="text-center text-2xl font-semibold text-blue-500 mb-6">Login</h2>
+    <div class="p-8 rounded-lg shadow-lg w-full sm:w-96">
+        <img src="/images/Black_Grey_Minimalist_Book_Club_Logo__1_-removebg-preview.png" alt="logo" class="w-[200px] mx-auto">
+        <h2 class="text-center text-2xl font-semibold text-slate-300 mb-6">Login</h2>
 
         <!-- Login Form -->
         <form class="space-y-6">
             <!-- Username Input -->
             <div>
-                <label for="username" class="block text-gray-700">Username</label>
+                <label for="username" class="block text-white font-bold">Username</label>
                 <input type="text" id="username" name="username" placeholder="Enter your username"
                     class="w-full px-4 py-2 mt-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
             </div>
 
             <!-- Password Input -->
             <div>
-                <label for="password" class="block text-gray-700">Password</label>
+                <label for="password" class="block text-white font-bold">Password</label>
                 <input type="password" id="password" name="password" placeholder="Enter your password"
                     class="w-full px-4 py-2 mt-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
             </div>
@@ -59,7 +63,7 @@
             <!-- Submit Button -->
             <div>
                 <button type="submit"
-                    class="w-full py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500" onclick="login(event)">
+                    class="w-full py-2 bg-slate-700  text-white rounded-lg hover:bg-slate-600 focus:outline-none focus:ring-2 focus:ring-blue-500 font-bold" onclick="login(event)">
                     Login
                 </button>
             </div>
@@ -67,11 +71,12 @@
 
         <!-- Forgot Password and Sign Up -->
         <div class="mt-4 text-center">
-            <a href="#" class="text-blue-500 hover:underline">Forgot Password?</a>
-            <p class="mt-4 text-gray-700">Don't have an account? <a href="signup.html"
-                    class="text-blue-500 hover:underline">Sign Up</a></p>
+            <a href="#" class="text-slate-200 hover:underline">Forgot Password?</a>
+            <p class="mt-4 text-gray-300">Don't have an account? <a href="signup.html"
+                    class="text-slate-100 hover:underline">Sign Up</a></p>
         </div>
     </div>
+
 
 </body>
 
